# HM-HashChecker

./: Cargo.toml  README.md  build.rs
src/: main.rs
