[package]
name = "HM-HashChecker"
version = "1.0.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
sha1 = "0.10"
sha3 = "0.10"
blake2 = "0.10"
md5 = "0.7"
crc32fast = "1.4"
crc = "3.2"
twox-hash = "1.6"
eframe = { version = "0.28", features = ["persistence"] }
serde = { version = "1.0", features = ["derive"] }
rfd = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
chrono = "0.4"

[build-dependencies]
winres = "0.1"

[dev-dependencies]
tempfile = "3.10"
